feat(cutscene): zoom on timeline